--- a/Portfolio project/css/style.css
+++ b/Portfolio project/css/style.css
@@ -86,7 +86,7 @@ h4 {
 .newslatter form input:first-child {
 	display: inline-block;
 	width: 100%;
-	padding: 14px 130px 14px 15px;
+	padding: 14px 150px 14px 15px;
 	border: 2px solid #4682B4;
 	outline: none;
 	border-radius: 30px;
@@ -102,7 +102,7 @@ h4 {
 	color: white;
 	box-shadow: 0px 0px 5px #000, 0px 0px 15px #F8F8F8;
 	top: 6px;
-	right: 0px;
+	right: -60px;
 }
 
 .about {
@@ -249,6 +249,60 @@ h5 {
 .resume img {
 	margin-top: 60px;
 }
+
+/*project section*/
+.projects {
+	background: #101010;
+	width: 100%;
+	padding: 50px 0;
+	text-align: center;
+}
+
+.projects h3 {
+	font-size: 60px;
+	margin-top: -50px;
+	margin-bottom: 60px;
+}
+
+.places {
+    text-align: center;
+}
+.places h2 {
+	fontsize: 24px;
+	color: #4682B4;
+	margin-bottom: 30px;
+}
+.places  a {
+	fontsize: 24px;
+	color: #F8F8F8;
+	margin-bottom: 10px;
+	display: block; 
+}
+
+
+/*cerificate*/
+.certificates {
+	background: #101010;
+	width: 100%;
+	padding: 50px 0;
+	text-align: center;
+}
+
+.certificates h3 {
+	font-size: 60px;
+	margin-top: -50px;
+	margin-bottom: 60px;
+}
+
+.places {
+    text-align: center;
+}
+.places h2 {
+	fontsize: 24px;
+	color: #4682B4;
+	margin-bottom: 30px;
+}
+
 
 
 
